incorporate past visits
